syntax = "proto3";
option optimize_for = SPEED;

message ProtoVector {
  float x = 1;
  float y = 2;
  float z = 3;
}

message ProtoPlayerMove {
  ProtoVector velocity = 1;
}

message ProtoPlayerRelease {
  int32 skillId = 1;
}